--- a/twitter/src/components/Settings/Settings.scss
+++ b/twitter/src/components/Settings/Settings.scss
@@ -8,9 +8,6 @@ form {
   display: flex;
   flex-direction: column;
   width: 300px;
-  .warning {
-    color: red !important;
-  }
   .twit-content {
     // display: flex;
     justify-content: space-between;
@@ -20,6 +17,7 @@ form {
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
+      // opacity: 0;
       border: none;
     }
     button {
