--- a/twitter/src/components/Twits/Twits.scss
+++ b/twitter/src/components/Twits/Twits.scss
@@ -62,6 +62,13 @@
           box-shadow: none;
         }
       }
+      .comment-button {
+        background: none;
+        border: none;
+        color: $blue;
+        font-size: 20px;
+        cursor: pointer;
+      }
     }
   }
 }
