--- a/twitter/src/components/Twits/Twits.scss
+++ b/twitter/src/components/Twits/Twits.scss
@@ -21,24 +21,45 @@
     &:hover {
       box-shadow: 0 0 20px $secondary;
     }
+    .twit-description {
+      width: 100%;
+      margin-bottom: 10px;
+      background-color: $white;
+      border: none;
+      color: $blue;
+      resize: none;
+      border-radius: 10px;
+      padding: 10px;
+      &:focus {
+        outline: none;
+        border: none;
+        box-shadow: none;
+      }
+    }
     .twit-header {
       display: flex;
       align-items: center;
       justify-content: space-between;
       margin-bottom: 10px;
-      .twit-description {
-        width: 80%;
-        background-color: $white;
-        border: none;
+      .nickname {
         color: $blue;
-        resize: none;
-        border-radius: 10px;
-        padding: 10px;
-        &:focus {
-          outline: none;
-          border: none;
-          box-shadow: none;
-        }
+        font-size: 35px;
+        font-weight: 600;
+        margin-right: 10px;
+      }
+      .avatar {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+      }
+      .avatar-none {
+        background: $blue;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
       }
       .twit-delete {
         color: #fff;
@@ -49,8 +70,8 @@
     .twit-content {
       background-repeat: no-repeat;
       background-size: cover;
-      height: 320px;
-      width: 320px;
+      width: 100%;
+      height: 400px;
       background-position: center center;
       border-radius: 10px;
     }
@@ -84,7 +105,7 @@
       }
     }
     .add-comment {
-      width: 400px;
+      width: 100%;
       background-color: #fff;
       opacity: 0.8;
       border-radius: 5px;
