--- a/twitter/src/components/Twits/Twits.scss
+++ b/twitter/src/components/Twits/Twits.scss
@@ -26,13 +26,14 @@
       align-items: center;
       justify-content: space-between;
       margin-bottom: 10px;
+      background-color: $white;
+      border-radius: 10px;
       .twit-description {
         width: 80%;
         background-color: $white;
         border: none;
         color: $blue;
         resize: none;
-        border-radius: 10px;
         padding: 10px;
         &:focus {
           outline: none;
@@ -40,8 +41,22 @@
           box-shadow: none;
         }
       }
+      .twit-heart {
+        color: #78909C;
+        margin-right: 15px;
+        cursor: pointer;
+        transition: 0.3s ease-in-out;
+      }
+      .twit-heart-active {
+        margin-right: 15px;
+        color: $blue;
+      }
+      .twit-heart:hover,
+      .twit-heart:focus {
+        color: $blue;
+      }
       .twit-delete {
-        color: #fff;
+        color: $secondary;
         margin-right: 15px;
         cursor: pointer;
       }
@@ -63,34 +78,42 @@
       margin-top: 10px;
       height: auto;
       .twit-comment {
+        width: 100%;
+        background-color: $white;
+        border-radius: 10px;
+        padding: 10px;
+        margin-bottom: 10px;
         display: flex;
         align-items: center;
+        justify-content: space-between;
         margin-bottom: 10px;
+        opacity: 0.8;
         .twit-comment-description {
+          font-size: 12px;
           resize: none;
-          width: 100%;
           height: 100%;
-          background-color: $white;
           border: none;
           color: $blue;
-          border-radius: 10px;
-          padding: 10px;
           &:focus {
             outline: none;
             border: none;
             box-shadow: none;
           }
         }
+        .twit-delete {
+          cursor: pointer;
+          color: $secondary;
+        }
       }
     }
     .add-comment {
       width: 400px;
       background-color: #fff;
-      opacity: 0.8;
+      opacity: 0.95;
       border-radius: 5px;
       .comment-input {
         width: 100%;
-        height: 100%;
+        height: 40px;
         border: none;
         padding: 10px;
         border-radius: 10px;
