--- a/twitter/src/components/Settings/Settings.scss
+++ b/twitter/src/components/Settings/Settings.scss
@@ -1,6 +1,88 @@
 @import "./../../colors.scss";
 * {
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
+}
+p {
+  color: $blue;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+
+.settings {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
+  width: 430px;
+  text-align: center;
+  h2 {
+    color: $blue;
+    font-size: 35px;
+    font-weight: 600;
+    margin-bottom: 50px;
+  } 
+  .settings-container > div {
+    margin-bottom: 20px;
+  }
+  .settings-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+    width: 430px;
+    .set-nickname {
+      input {
+        border: 1px solid $blue;
+        border-radius: 5px;
+        color: $blue;
+        font-size: 20px;
+        font-weight: 600;
+        height: 40px;
+        margin-bottom: 10px;
+        padding: 0 10px;
+        width: 300px;
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+    .new-password {
+      input {
+        border: 1px solid $blue;
+        border-radius: 5px;
+        color: $blue;
+        font-size: 20px;
+        font-weight: 600;
+        height: 40px;
+        margin-bottom: 10px;
+        padding: 0 10px;
+        width: 300px;
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+    .update-user {
+      button {
+        background-color: $blue;
+        border: none;
+        border-radius: 5px;
+        color: $white;
+        font-size: 20px;
+        font-weight: 600;
+        height: 30px;
+        margin-bottom: 10px;
+        padding: 0 10px;
+        width: 200px;
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+  }
 }
