--- a/twitter/src/components/Twits/Twits.scss
+++ b/twitter/src/components/Twits/Twits.scss
@@ -21,19 +21,30 @@
     &:hover {
       box-shadow: 0 0 20px $secondary;
     }
-    .twit-description {
-      width: 100%;
+    .twit-info {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       margin-bottom: 10px;
-      background-color: $white;
-      border: none;
-      color: $blue;
-      resize: none;
-      border-radius: 10px;
-      padding: 10px;
-      &:focus {
-        outline: none;
-        border: none;
-        box-shadow: none;
+      .avatar {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+      }
+      .avatar-none {
+        background: $blue;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+      }
+      .nickname {
+        color: $blue;
+        font-size: 35px;
+        font-weight: 600;
+        margin-right: 10px;
       }
     }
     .twit-header {
@@ -55,6 +66,7 @@
           border: none;
           box-shadow: none;
         }
+      }
       .nickname {
         color: $blue;
         font-size: 35px;
@@ -74,6 +86,12 @@
         width: 60px;
         height: 60px;
         border-radius: 50%;
+      }
+      .twit-heart-counter {
+        color: $blue;
+        font-size: 25px;
+        margin-right: 25px;
+        margin-top: -5px;
       }
       .twit-heart {
         color: #78909C;
@@ -143,7 +161,7 @@
     .add-comment {
       width: 100%;
       background-color: #fff;
-      opacity: 0.95;
+      opacity: 0.8;
       border-radius: 5px;
       .comment-input {
         width: 100%;
@@ -171,6 +189,5 @@
         padding: 10px 5px;
       }
     }
-  }
   }
 }
