--- a/twitter/src/components/Header/Header.scss
+++ b/twitter/src/components/Header/Header.scss
@@ -5,6 +5,9 @@
   box-sizing: border-box;
 }
 .panel-container {
+  position: fixed;
+  width: 100%;
+  z-index: 10;
   background: $background;
   box-sizing: border-box;
   .top {
