--- a/twitter/src/components/Twits/Twits.scss
+++ b/twitter/src/components/Twits/Twits.scss
@@ -144,6 +144,7 @@
           font-size: 12px;
           resize: none;
           height: 100%;
+          width: 100%;
           border: none;
           color: $blue;
           &:focus {
