--- a/twitter/src/components/Searcher/Searcher.scss
+++ b/twitter/src/components/Searcher/Searcher.scss
@@ -1,23 +1,32 @@
 @import "./../../colors.scss";
-.add-twits-container {
+.searcher {
   display: flex;
   justify-content: center;
-  position: fixed;
-  z-index: 15;
   form {
+    box-shadow: 0px 10px 10px $secondary;
     display: flex;
-    flex-direction: column;
+    background: $white;
     width: 430px;
-    textarea {
-      height: 60px;
-      resize: none;
-      padding: 15px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      margin-bottom: 10px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    border-radius: 5px;
+    .loop {
+      color: $secondary;
+    }
+    .hashtag-symbol {
+      margin-right: 5px;
+      height: 45px;
+    }
+    .searcher-content {
+      display: flex;
+      align-items: center;
+    }
+    input {
+      color: $secondary;
+      border: none;
       &:focus {
         outline: none;
-        box-shadow: 0 0 5px #0c8de4;
       }
     }
 
