--- a/twitter/src/components/Twits/Twits.scss
+++ b/twitter/src/components/Twits/Twits.scss
@@ -8,7 +8,57 @@
   position: fixed;
   width: 100%;
   z-index: 10;
+  display: flex;
+  justify-content: center;
+  form {
+    box-shadow: 0px 10px 10px $secondary;
+    display: flex;
+    background: $white;
+    width: 430px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    border-radius: 5px;
+    .loop {
+      color: $secondary;
+    }
+    .hashtag-symbol {
+      margin-right: 5px;
+      height: 45px;
+    }
+    .searcher-content {
+      display: flex;
+      align-items: center;
+    }
+    input {
+      color: $secondary;
+      border: none;
+      &:focus {
+        outline: none;
+      }
+    }
+
+    .twit-content {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      button {
+        border: none;
+        background-color: #1da1f2;
+        color: white;
+        padding: 10px 20px;
+        width: 100px;
+        border-radius: 5px;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #0c8de4;
+        }
+      }
+    }
+  }
 }
+
 .twits {
   padding-top: 120px;
   display: flex;
