--- a/twitter/src/views/MainPage/MainPage.scss
+++ b/twitter/src/views/MainPage/MainPage.scss
@@ -1,10 +1,45 @@
 @import "./../../colors.scss";
 .main-page {
-  .twits-functionality {
-    display: flex;
-    justify-content: space-around;
-  }
-  h2 {
-    margin: 10px 0;
+  .fixed-login-register {
+    position: relative;
+    background: $blue;
+    padding: 15px 0;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+
+    .text-content {
+      width: 430px;
+      margin: 0 auto;
+      h2,
+      p {
+        color: $white;
+      }
+    }
+    .buttons {
+      position: absolute;
+      top: 30px;
+      right: 50px;
+      display: flex;
+      justify-content: space-between;
+      width: 20%;
+      button {
+        transition: 0.2s;
+        border-radius: 20px;
+        padding: 6px 20px;
+        font-size: 16px;
+        border: none;
+        font-weight: 600;
+        cursor: pointer;
+        &:hover {
+          background: rgba(255, 255, 255, 0.2);
+        }
+      }
+      .login-button {
+        background: transparent;
+        color: $white;
+        border: 2px solid rgba(255, 255, 255, 0.5);
+      }
+    }
   }
 }
