burger menu template + some scss updates

--- a/twitter/src/views/MainPage/MainPage.scss
+++ b/twitter/src/views/MainPage/MainPage.scss
@@ -3,6 +3,7 @@
   .fixed-login-register {
     position: relative;
     background: $blue;
+    box-shadow: 0 3px 15px 4px $secondary;
     padding: 15px 0;
     width: 100%;
     position: fixed;
