--- a/twitter/src/components/Header/Header.scss
+++ b/twitter/src/components/Header/Header.scss
@@ -4,66 +4,209 @@
   padding: 0;
   box-sizing: border-box;
 }
-.panel-container {
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Avenir Next", "Avenir", sans-serif;
+  overflow-x: hidden;
+}
+a {
+  text-decoration: none;
+}
+
+#menuToggle {
+  display: block;
+  z-index: 999;
   position: fixed;
-  width: 100%;
-  z-index: 10;
-  background: $background;
-  box-sizing: border-box;
-  .top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    .top-left {
-      display: flex;
-      align-items: center;
-      img {
-        height: 100px;
-        margin-right: 10px;
-      }
-    }
-  }
-  h1 {
-    color: $white;
-    margin-bottom: 10px;
-    span {
-      color: $blue;
-    }
-  }
-  .email {
-    display: flex;
-    color: #7b0dbf;
-    align-items: center;
-    font-size: 22px;
-    img {
-      margin-right: 7px;
-    }
-  }
-  input {
-    border: none;
-    border: 1px solid $white;
-    background: transparent;
-    padding: 10px;
-    border-bottom-left-radius: 8px;
-    color: $white;
-  }
-  .logout {
-    height: 35px;
-    top: 10px;
-    right: 10px;
-    margin-right: 20px;
-    border: none;
-    border-radius: 8px;
-    color: $white;
-    font-size: 20px;
-    cursor: pointer;
-    width: 200px;
-    padding: 5px;
-    color: $background;
-    &:hover {
-      background: $secondaryHover;
-      color: $white;
-      border: 0.1px solid $white;
-    }
+  top: 50px;
+  right: 50px;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+
+  cursor: pointer;
+
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: #cdcdcd;
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: $blue;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  opacity: 1;
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu {
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 0;
+  padding-top: 125px;
+  right: -100px;
+  height: 103.5vh;
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+
+  transform-origin: 0% 0%;
+  transform: translate(100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+#menu li {
+  margin-left: 10px;
+  padding: 10px 0;
+  padding-left: 50px;
+  font-size: 22px;
+  color: $secondary;
+  transition: 0.1s ease;
+  border-radius: 50px;
+}
+#menu li:hover {
+  background-color: $blue;
+  color: $white;
+}
+
+/*
+ * And let's fade it in from the left
+ */
+#menuToggle input:checked ~ ul {
+  transform: none;
+  opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  #menu {
+    transform: none;
+    opacity: 0;
+
+    transition: opacity 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
   }
 }
+// .panel-container {
+//   position: fixed;
+//   width: 100%;
+//   z-index: 10;
+//   background: $background;
+//   box-sizing: border-box;
+//   .top {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     .top-left {
+//       display: flex;
+//       align-items: center;
+//       img {
+//         height: 100px;
+//         margin-right: 10px;
+//       }
+//     }
+//   }
+//   h1 {
+//     color: $white;
+//     margin-bottom: 10px;
+//     span {
+//       color: $blue;
+//     }
+//   }
+//   .email {
+//     display: flex;
+//     color: #7b0dbf;
+//     align-items: center;
+//     font-size: 22px;
+//     img {
+//       margin-right: 7px;
+//     }
+//   }
+//   input {
+//     border: none;
+//     border: 1px solid $white;
+//     background: transparent;
+//     padding: 10px;
+//     border-bottom-left-radius: 8px;
+//     color: $white;
+//   }
+//   .logout {
+//     height: 35px;
+//     top: 10px;
+//     right: 10px;
+//     margin-right: 20px;
+//     border: none;
+//     border-radius: 8px;
+//     color: $white;
+//     font-size: 20px;
+//     cursor: pointer;
+//     width: 200px;
+//     padding: 5px;
+//     color: $background;
+//     &:hover {
+//       background: $secondaryHover;
+//       color: $white;
+//       border: 0.1px solid $white;
+//     }
+//   }
+// }
