--- a/twitter/src/components/Header/Header.scss
+++ b/twitter/src/components/Header/Header.scss
@@ -123,6 +123,7 @@ a {
 }
 #menu a .menuIcon {
   margin-right: 25px;
+  color: $secondary;
 }
 #menu li {
   padding: 10px 0;
@@ -135,7 +136,8 @@ a {
   background-color: $blue;
   color: $white;
 }
-#menu a:hover li {
+#menu a:hover li,
+#menu a:hover .menuIcon {
   color: $white;
 }
 #menu .user-info .avatar {
@@ -176,66 +178,3 @@ a {
     transition: opacity 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
   }
 }
-// .panel-container {
-//   position: fixed;
-//   width: 100%;
-//   z-index: 10;
-//   background: $background;
-//   box-sizing: border-box;
-//   .top {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     .top-left {
-//       display: flex;
-//       align-items: center;
-//       img {
-//         height: 100px;
-//         margin-right: 10px;
-//       }
-//     }
-//   }
-//   h1 {
-//     color: $white;
-//     margin-bottom: 10px;
-//     span {
-//       color: $blue;
-//     }
-//   }
-//   .email {
-//     display: flex;
-//     color: #7b0dbf;
-//     align-items: center;
-//     font-size: 22px;
-//     img {
-//       margin-right: 7px;
-//     }
-//   }
-//   input {
-//     border: none;
-//     border: 1px solid $white;
-//     background: transparent;
-//     padding: 10px;
-//     border-bottom-left-radius: 8px;
-//     color: $white;
-//   }
-//   .logout {
-//     height: 35px;
-//     top: 10px;
-//     right: 10px;
-//     margin-right: 20px;
-//     border: none;
-//     border-radius: 8px;
-//     color: $white;
-//     font-size: 20px;
-//     cursor: pointer;
-//     width: 200px;
-//     padding: 5px;
-//     color: $background;
-//     &:hover {
-//       background: $secondaryHover;
-//       color: $white;
-//       border: 0.1px solid $white;
-//     }
-//   }
-// }
