--- a/twitter/src/views/Settings/Settings.scss
+++ b/twitter/src/views/Settings/Settings.scss
@@ -1,87 +1,130 @@
 @import "./../../colors.scss";
-* {
-  box-sizing: border-box;
-  padding: 0;
-}
+@import url("https://fonts.googleapis.com/css2?family=Advent+Pro:wght@200;300;500;700&family=Alata&display=swap");
 
 .settings {
-  p {
-    color: $blue;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
+  .icon {
+    position: absolute;
+    bottom: 0px;
+    width: 300px;
   }
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0 auto;
-  width: 430px;
-  text-align: center;
   h2 {
-    color: $blue;
-    font-size: 35px;
-    font-weight: 600;
-    margin-bottom: 50px;
+    margin: 0;
+    color: $black;
+    padding-right: 20px;
+    font-family: Alata;
   }
-  .settings-container > div {
-    margin-bottom: 20px;
+  .title-button {
+    margin-top: 50px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    .update-button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: Alata;
+      font-size: 20px;
+      background: $white;
+      padding: 5px 15px;
+      align-self: center;
+      border: none;
+      border-radius: 10px;
+      transition: 0.2s;
+      cursor: pointer;
+      border: 2px solid transparent;
+      &:hover {
+        border-color: $green-second;
+      }
+      .update-button-text {
+        width: 80px;
+        text-align: right;
+      }
+      .updated-icon-default {
+        opacity: 0;
+        transition: 0.2s;
+        margin-left: 5px;
+        color: $green;
+      }
+      .updated-icon {
+        opacity: 1 !important;
+      }
+    }
+    .success {
+      box-shadow: 0px 0px 5px 1px $blue;
+    }
   }
   .settings-container {
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+
+    p {
+      font-family: Alata;
+      font-size: 25px;
+      background: linear-gradient(101.53deg, #319d38 17.35%, #29146f 94.36%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      margin-bottom: 15px;
+    }
+    input {
+      margin-bottom: 10px;
+      font-family: Alata;
+      font-size: 20px;
+      padding: 5px 10px;
+      border: none;
+      border-radius: 10px;
+      background: $white;
+      transition: 0.2s;
+      border: 2px solid transparent;
+      &::placeholder {
+        color: $blue;
+      }
+      &:focus {
+        outline: none;
+        border-color: $green;
+      }
+    }
+  }
+  .set-avatar-content {
+    display: flex;
+    justify-content: space-between;
+    .avatar {
+      height: 70px;
+      width: 70px;
+    }
+    .set-avatar-button {
+      justify-content: space-between;
+      align-self: flex-end;
+      font-family: Alata;
+      font-size: 20px;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      .file-base64-avatar {
+        display: none;
+      }
+      span {
+        margin-left: 10px;
+        width: 70px;
+      }
+    }
+  }
+  .set-nickname,
+  .new-password {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0 auto;
-    width: 430px;
-    .set-nickname {
-      input {
-        border: 1px solid $blue;
-        border-radius: 5px;
-        color: $blue;
-        font-size: 20px;
-        font-weight: 600;
-        height: 40px;
-        margin-bottom: 10px;
-        padding: 0 10px;
-        width: 300px;
-        &:focus {
-          outline: none;
-        }
-      }
+  }
+  .current-nickname-container {
+    display: flex;
+    flex-direction: column;
+    .current-nickname {
+      color: $blue;
     }
-    .new-password {
-      input {
-        border: 1px solid $blue;
-        border-radius: 5px;
-        color: $blue;
-        font-size: 20px;
-        font-weight: 600;
-        height: 40px;
-        margin-bottom: 10px;
-        padding: 0 10px;
-        width: 300px;
-        &:focus {
-          outline: none;
-        }
-      }
-    }
-    .update-user {
-      button {
-        background-color: $blue;
-        border: none;
-        border-radius: 5px;
-        color: $white;
-        font-size: 20px;
-        font-weight: 600;
-        height: 30px;
-        margin-bottom: 10px;
-        padding: 0 10px;
-        width: 200px;
-        &:focus {
-          outline: none;
-        }
-      }
+    .current-nickname-label {
+      font-family: Alata;
+      color: $blue;
+      opacity: 0.8;
     }
   }
 }
