--- a/twitter/src/views/Settings/Settings.scss
+++ b/twitter/src/views/Settings/Settings.scss
@@ -1,86 +1,68 @@
 @import "./../../colors.scss";
+
 * {
   box-sizing: border-box;
   padding: 0;
 }
 
-.settings {
-  p {
-    color: $blue;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
-  }
+.user-settings {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
+  align-items: center;
   margin: 0 auto;
   width: 430px;
   text-align: center;
+
   h2 {
     color: $blue;
     font-size: 35px;
     font-weight: 600;
     margin-bottom: 50px;
   }
-  .settings-container > div {
-    margin-bottom: 20px;
-  }
-  .settings-container {
+
+  .input-field {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0 auto;
-    width: 430px;
-    .set-nickname {
-      input {
-        border: 1px solid $blue;
-        border-radius: 5px;
-        color: $blue;
-        font-size: 20px;
-        font-weight: 600;
-        height: 40px;
-        margin-bottom: 10px;
-        padding: 0 10px;
-        width: 300px;
-        &:focus {
-          outline: none;
-        }
+    align-items: center;
+    margin-bottom: 20px;
+
+    label {
+      color: $blue;
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: 10px;
+    }
+
+    input {
+      border: 1px solid $blue;
+      border-radius: 5px;
+      color: $blue;
+      font-size: 20px;
+      font-weight: 600;
+      height: 40px;
+      margin-bottom: 10px;
+      padding: 0 10px;
+      width: 300px;
+      &:focus {
+        outline: none;
       }
     }
-    .new-password {
-      input {
-        border: 1px solid $blue;
-        border-radius: 5px;
-        color: $blue;
-        font-size: 20px;
-        font-weight: 600;
-        height: 40px;
-        margin-bottom: 10px;
-        padding: 0 10px;
-        width: 300px;
-        &:focus {
-          outline: none;
-        }
-      }
-    }
-    .update-user {
-      button {
-        background-color: $blue;
-        border: none;
-        border-radius: 5px;
-        color: $white;
-        font-size: 20px;
-        font-weight: 600;
-        height: 30px;
-        margin-bottom: 10px;
-        padding: 0 10px;
-        width: 200px;
-        &:focus {
-          outline: none;
-        }
+  }
+
+  .update-button {
+    button {
+      background-color: $blue;
+      border: none;
+      border-radius: 5px;
+      color: $white;
+      font-size: 20px;
+      font-weight: 600;
+      height: 40px;
+      margin-top: 20px;
+      padding: 0 10px;
+      width: 200px;
+      &:focus {
+        outline: none;
       }
     }
   }
