--- a/twitter/src/views/Settings/Settings.scss
+++ b/twitter/src/views/Settings/Settings.scss
@@ -1,6 +1,25 @@
 @import "./../../colors.scss";
 @import url("https://fonts.googleapis.com/css2?family=Advent+Pro:wght@200;300;500;700&family=Alata&display=swap");
-
+.container {
+  min-height: 100vh;
+  position: relative;
+  width: 85%;
+  margin: 0 auto;
+}
+.avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border: 2px solid $blue;
+  margin-right: 20px;
+}
+.default-avatar {
+  color: $black;
+  border: none !important;
+}
 .settings {
   .icon {
     position: absolute;
