--- a/twitter/src/colors.scss
+++ b/twitter/src/colors.scss
@@ -1,22 +1,13 @@
-$background: #030716;
+// $background: #030716;
+$background: #071136;
 $secondary: #410864;
 $secondaryHover: linear-gradient(245.3deg, #320b49 25.83%, #092692 93.39%);
-// $white: white;
-$blue: #3813c2;
 
-// $background: #d6ebd7;
 $black: #121212;
-// $secondary: #410864;
 $white: #f2f2f2;
-$blue: #29146f;
+$blue: #040a20;
+$indigo-light: #9ca0af;
+$twitter-color: #1da1f2;
+$twitter-color-dark: #0c75bc;
 $blue-darkest: #211059;
 $blue-second: #092692;
-$green: #319d38;
-$green-second: #1d5e22;
-$green-darkest: #143f16;
-$green-lightest: #add8af;
-$red: #c53220;
-$yellow: #ede98f;
-$yellow-second: #e7e26a;
-$yellow-darkest: #b4af37;
-// $secondaryHover: linear-gradient(245.3deg, $blue-second 25.83%, $green 93.39%);
