--- a/twitter/src/components/Header/Header.scss
+++ b/twitter/src/components/Header/Header.scss
@@ -75,7 +75,7 @@ a {
 #menuToggle input:checked ~ span {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
-  background: $blue;
+  background: $blue-second;
 }
 
 /*
@@ -114,7 +114,7 @@ a {
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 }
 #menu .chosen-element {
-  border: 0.5px solid $blue !important;
+  border: 0.5px solid $blue-second !important;
 }
 #menu .menu-element,
 .user-info {
@@ -142,7 +142,7 @@ a {
   border-radius: 50px;
 }
 #menu .menu-element:hover {
-  background-color: $blue;
+  background-color: $blue-second;
   color: $white;
 }
 #menu .menu-element:hover li,
