--- a/twitter/src/components/Twits/Twits.scss
+++ b/twitter/src/components/Twits/Twits.scss
@@ -170,6 +170,7 @@
       margin-top: 10px;
       height: auto;
       .twit-comment {
+        color: black;
         width: 100%;
         background-color: $white;
         border-radius: 10px;
