--- a/twitter/src/views/Settings/Settings.scss
+++ b/twitter/src/views/Settings/Settings.scss
@@ -12,7 +12,7 @@
 
   h2 {
     margin: 0;
-    color: $black;
+    color: $background;
     padding-right: 20px;
     font-family: Alata;
   }
@@ -45,7 +45,7 @@
       }
       &:focus {
         outline: none;
-        border-color: $green;
+        border-color: #319d38;
       }
     flex-direction: column;
     align-items: center;
@@ -101,37 +101,37 @@
   }
 }
 
-    input {
-      border: 1px solid $blue;
-      border-radius: 5px;
-      color: $blue;
-      font-size: 20px;
-      font-weight: 600;
-      height: 40px;
-      margin-bottom: 10px;
-      padding: 0 10px;
-      width: 300px;
-      &:focus {
-        outline: none;
-      }
+  input {
+    border: 1px solid $blue;
+    border-radius: 5px;
+    color: $blue;
+    font-size: 20px;
+    font-weight: 600;
+    height: 40px;
+    margin-bottom: 10px;
+    padding: 0 10px;
+    width: 300px;
+    &:focus {
+      outline: none;
     }
   }
+  
+.update-button {
+  button {
+    background-color: $blue;
+    border: none;
+    border-radius: 5px;
+    color: $white;
+    font-size: 20px;
+    font-weight: 600;
+    height: 40px;
+    margin-top: 20px;
+    padding: 0 10px;
+    width: 200px;
+    &:focus {
+      outline: none;
+    }
+  }
+}
 
-  .update-button {
-    button {
-      background-color: $blue;
-      border: none;
-      border-radius: 5px;
-      color: $white;
-      font-size: 20px;
-      font-weight: 600;
-      height: 40px;
-      margin-top: 20px;
-      padding: 0 10px;
-      width: 200px;
-      &:focus {
-        outline: none;
-      }
-    }
-  }
 }
