--- a/twitter/src/components/AddTwit/AddTwit.scss
+++ b/twitter/src/components/AddTwit/AddTwit.scss
@@ -11,26 +11,31 @@
     .content-main {
       display: flex;
       align-items: center;
-      background: $white;
+      box-shadow: 0px 30px 30px $twitter-color-dark;
       justify-content: space-between;
       padding: 10px 20px;
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
+      border-right: 1.45px solid $twitter-color-dark;
       textarea {
         height: 60px;
         resize: none;
         padding: 15px;
+        background: transparent;
         width: 85%;
-        border: 1px solid $secondary;
+        // border: 1px solid $secondary;
+        border: none;
+        color: $twitter-color;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
         border-radius: 5px;
         margin-bottom: 10px;
         &:focus {
           outline: none;
-          box-shadow: 0 0 5px #0c8de4;
+          // box-shadow: 0 0 5px #0c8de4;
         }
       }
       .add-twit-icon {
-        color: $secondary;
+        color: $blue-second;
         cursor: pointer;
       }
     }
