--- a/twitter/src/components/Twits/Twits.scss
+++ b/twitter/src/components/Twits/Twits.scss
@@ -1,8 +1,22 @@
 @import "./../../colors.scss";
+@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+body {
+  position: relative;
+}
+.filtered-title {
+  font-family: monoton;
+  color: $white;
+  position: fixed;
+  top: 50px;
+  right: 260px;
+  text-shadow: 5px 5px 50px $twitter-color;
+  z-index: 999;
+  font-size: 45px;
 }
 .searcher {
   position: fixed;
@@ -11,8 +25,10 @@
   display: flex;
   justify-content: center;
   background: $background;
+  .active {
+    box-shadow: 0px 4px 10px $twitter-color-dark;
+  }
   form {
-    // box-shadow: 0px 4px 10px $twitter-color-dark;
     display: flex;
     background: $background;
     border: 1.45px solid $twitter-color-dark;
@@ -138,7 +154,7 @@
           box-shadow: none;
         }
         .hashtag {
-          color: $secondary;
+          color: $twitter-color;
           font-weight: 600;
           cursor: pointer;
         }
