--- a/twitter/src/components/Twits/Twits.scss
+++ b/twitter/src/components/Twits/Twits.scss
@@ -227,10 +227,11 @@ body {
         }
         .twit-delete {
           cursor: pointer;
-          color: $secondary;
+          color: $indigo-light;
         }
       }
     }
+
     .add-comment {
       width: 100%;
       background: $indigo-light;
