--- a/twitter/src/views/MainPage/MainPage.scss
+++ b/twitter/src/views/MainPage/MainPage.scss
@@ -41,6 +41,9 @@
         color: $white;
         border: 2px solid rgba(255, 255, 255, 0.5);
       }
+      .register-button:hover {
+        color: $white;
+      }
     }
   }
 }
